--- a/album-bongchuyen.html
+++ b/album-bongchuyen.html
@@ -57,16 +57,17 @@
         <a href="index.html" class="back-btn">← Quay lại trang chủ</a>
 
         <div class="photo-grid">
-            <div class="photo-item"><img src="bongchuyen/1.jpg" alt="Bóng chuyền 1"></div>
-            <div class="photo-item"><img src="bongchuyen/2.jpg" alt="Bóng chuyền 2"></div>
-            <div class="photo-item"><img src="bongchuyen/3.jpg" alt="Bóng chuyền 3"></div>
-            <div class="photo-item"><img src="bongchuyen/4.jpg" alt="Bóng chuyền 4"></div>
-            <div class="photo-item"><img src="bongchuyen/5.jpg" alt="Bóng chuyền 5"></div>
-            <div class="photo-item"><img src="bongchuyen/6.jpg" alt="Bóng chuyền 6"></div>
-            <div class="photo-item"><img src="bongchuyen/7.jpg" alt="Bóng chuyền 7"></div>
-            <div class="photo-item"><img src="bongchuyen/8.jpg" alt="Bóng chuyền 8"></div>
-            <div class="photo-item"><img src="bongchuyen/9.jpg" alt="Bóng chuyền 9"></div>
+            <div class="photo-item"><img src="1.jpg" alt="Bóng chuyền 1"></div>
+            <div class="photo-item"><img src="2.jpg" alt="Bóng chuyền 2"></div>
+            <div class="photo-item"><img src="3.jpg" alt="Bóng chuyền 3"></div>
+            <div class="photo-item"><img src="4.jpg" alt="Bóng chuyền 4"></div>
+            <div class="photo-item"><img src="5.jpg" alt="Bóng chuyền 5"></div>
+            <div class="photo-item"><img src="6.jpg" alt="Bóng chuyền 6"></div>
+            <div class="photo-item"><img src="7.jpg" alt="Bóng chuyền 7"></div>
+            <div class="photo-item"><img src="8.jpg" alt="Bóng chuyền 8"></div>
+            <div class="photo-item"><img src="9.jpg" alt="Bóng chuyền 9"></div>
         </div>
     </div>
 </body>
+
 </html>
