--- a/album-caulong.html
+++ b/album-caulong.html
@@ -66,39 +66,38 @@
 
         <div class="photo-grid">
             <div class="photo-item">
-                <img src="caulong/1.jpg" alt="Ảnh cầu lông 1">
+                <img src="10.jpg" alt="Ảnh cầu lông 1">
             </div>
 
             <div class="photo-item">
-                <img src="caulong/2.jpg" alt="Ảnh cầu lông 2">
+                <img src="11.jpg" alt="Ảnh cầu lông 2">
             </div>
 
             <div class="photo-item">
-                <img src="caulong/3.jpg" alt="Ảnh cầu lông 3">
+                <img src="12.jpg" alt="Ảnh cầu lông 3">
             </div>
 
             <div class="photo-item">
-                <img src="caulong/4.jpg" alt="Ảnh cầu lông 4">
+                <img src="13.jpg" alt="Ảnh cầu lông 4">
             </div>
             <div class="photo-item">
-                <img src="caulong/4.jpg" alt="Ảnh cầu lông 4">
+                <img src="14.jpg" alt="Ảnh cầu lông 4">
             </div>
             <div class="photo-item">
-                <img src="caulong/5.jpg" alt="Ảnh cầu lông 5">  
+                <img src="15.jpg" alt="Ảnh cầu lông 5">  
             </div>
             <div class="photo-item">
-                <img src="caulong/6.jpg" alt="Ảnh cầu lông 6">
+                <img src="16.jpg" alt="Ảnh cầu lông 6">
             </div>
             <div class="photo-item">
-                <img src="caulong/7.jpg" alt="Ảnh cầu lông 6">
+                <img src="17.jpg" alt="Ảnh cầu lông 6">
             </div>
             <div class="photo-item">
-                <img src="caulong/8.jpg" alt="Ảnh cầu lông 6">
+                <img src="18.jpg" alt="Ảnh cầu lông 6">
             </div>
-            <div class="photo-item">
-                <img src="caulong/9.jpg" alt="Ảnh cầu lông 6">
-            </div>
+            
     </div>
 
 </body>
+
 </html>
