--- a/album-covua.html
+++ b/album-covua.html
@@ -57,13 +57,14 @@
         <a href="index.html" class="back-btn">← Quay lại trang chủ</a>
 
         <div class="photo-grid">
-            <div class="photo-item"><img src="covua/1.jpg" alt="Cờ vua 1"></div>
-            <div class="photo-item"><img src="covua/2.jpg" alt="Cờ vua 2"></div>
-            <div class="photo-item"><img src="covua/3.jpg" alt="Cờ vua 3"></div>
-            <div class="photo-item"><img src="covua/4.jpg" alt="Cờ vua 4"></div>
-            <div class="photo-item"><img src="covua/5.jpg" alt="Cờ vua 5"></div>
-            <div class="photo-item"><img src="covua/6.jpg" alt="Cờ vua 6"></div>
+            <div class="photo-item"><img src="19.jpg" alt="Cờ vua 1"></div>
+            <div class="photo-item"><img src="20.jpg" alt="Cờ vua 2"></div>
+            <div class="photo-item"><img src="21.jpg" alt="Cờ vua 3"></div>
+            <div class="photo-item"><img src="22.jpg" alt="Cờ vua 4"></div>
+            <div class="photo-item"><img src="23.jpg" alt="Cờ vua 5"></div>
+            <div class="photo-item"><img src="24.jpg" alt="Cờ vua 6"></div>
         </div>
     </div>
 </body>
+
 </html>
