--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="club-card">
             <div class="club-image">
-                <img src="caulong/thumbnail.jpg" alt="CLB Cầu Lông">
+                <img src="caulong.jpg" alt="CLB Cầu Lông">
             </div>
             <div class="club-info">
                 <h3>CLB Cầu Lông</h3>
@@ -33,7 +33,7 @@
 
         <div class="club-card">
             <div class="club-image">
-                <img src="covua/thumbnail.jpg" alt="CLB Cờ Vua">
+                <img src="covua.jpg" alt="CLB Cờ Vua">
             </div>
             <div class="club-info">
                 <h3>CLB Cờ Vua</h3>
@@ -44,7 +44,7 @@
 
         <div class="club-card">
             <div class="club-image">
-                <img src="bongchuyen/thumbnail.jpg" alt="CLB Bóng Chuyền">
+                <img src="bongchuyen.jpg" alt="CLB Bóng Chuyền">
             </div>
             <div class="club-info">
                 <h3>CLB Bóng Chuyền</h3>
@@ -60,4 +60,5 @@
     </footer>
 
 </body>
+
 </html>
