--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="club-card">
             <div class="club-image">
-                <img src="caulong.jpg" alt="CLB Cầu Lông">
+                <img src="images/caulong.jpg" alt="CLB Cầu Lông">
             </div>
             <div class="club-info">
                 <h3>CLB Cầu Lông</h3>
@@ -33,7 +33,7 @@
 
         <div class="club-card">
             <div class="club-image">
-                <img src="covua.jpg" alt="CLB Cờ Vua">
+                <img src="images/covua.jpg" alt="CLB Cờ Vua">
             </div>
             <div class="club-info">
                 <h3>CLB Cờ Vua</h3>
@@ -44,7 +44,7 @@
 
         <div class="club-card">
             <div class="club-image">
-                <img src="bongchuyen.jpg" alt="CLB Bóng Chuyền">
+                <img src="images/bongchuyen.jpg" alt="CLB Bóng Chuyền">
             </div>
             <div class="club-info">
                 <h3>CLB Bóng Chuyền</h3>
@@ -62,3 +62,4 @@
 </body>
 
 </html>
+
