--- a/index.html
+++ b/index.html
@@ -30,17 +30,16 @@
                 <a href="album-caulong.html" class="btn-link">Xem full tất cả ảnh</a>
             </div>
         </div>
-
-        <div class="club-card">
-            <div class="club-image">
-                <img src="images/covua.jpg" alt="CLB Cờ Vua">
-            </div>
-            <div class="club-info">
-                <h3>CLB Cờ Vua</h3>
-                <p class="slogan">"Nơi trí tuệ gặp gỡ đam mê. Cùng nhau rèn luyện tư duy, chiến thuật và kết nối những người yêu cờ sau khoảng thời gian học tập mệt nhoài."</p>
-                <a href="album-covua.html" class="btn-link">Xem full tất cả ảnh</a>
-            </div>
-        </div>
+<div class="club-card">
+    <div class="club-image">
+        <img src="../covua.jpg" alt="CLB Cờ Vua">
+    </div>
+    <div class="club-info">
+        <h3>CLB Cờ Vua</h3>
+        <p class="slogan">"Nơi trí tuệ gặp gỡ đam mê. Cùng nhau rèn luyện tư duy, chiến thuật và kết nối những người yêu cờ sau khoảng thời gian học tập mệt nhoài."</p>
+        <a href="album-covua.html" class="btn-link">Xem full tất cả ảnh</a>
+    </div>
+</div>
 
         <div class="club-card">
             <div class="club-image">
@@ -62,4 +61,5 @@
 </body>
 
 </html>
+
 
